Trait impl and bounds

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
@@ -61,11 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -157,11 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -264,11 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -384,11 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -482,11 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fn largest<T>(list:&[T])-> Option<&T> { None }"
@@ -512,11 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -625,11 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -754,11 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -822,11 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -984,11 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1064,11 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1186,11 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1291,11 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pub trait Summary{\n",
@@ -1355,11 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1452,11 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "Error",
@@ -1531,6 +1471,378 @@
     "vice versa. Without the rule, two crates could implement the same trait for the  \n",
     "same type, and Rust wouldn’t know which implementation to use."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Default Implementations\n",
+    "\n",
+    "Sometimes it’s useful to have default behavior for some or all of the methods in  \n",
+    "a trait instead of requiring implementations for all methods on every type.  \n",
+    "Then, as we implement the trait on a particular type, we can keep or override  \n",
+    "each method’s default behavior.\n",
+    "\n",
+    "In Listing 10-14 we specify a default string for the summarize method of the  \n",
+    "Summary trait instead of only defining the method signature, as we did in  \n",
+    "Listing 10-12.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pub trait Summary{\n",
+    "    fn summarize(&self) -> String{\n",
+    "        String::from(\"Read more ...\")\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 10-14: Defining a Summary trait with a default implementation of the  \n",
+    "summarize method\n",
+    "\n",
+    "To use a default implementation to summarize instances of NewsArticle, we  \n",
+    "specify an empty impl block with impl Summary for NewsArticle {}.\n",
+    "\n",
+    "Even though we’re no longer defining the summarize method on NewsArticle  \n",
+    "directly, we’ve provided a default implementation and specified that NewsArticle  \n",
+    "implements the Summary trait. As a result, we can still call the summarize  \n",
+    "method on an instance of NewsArticle, like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reddit Feed! Read more ...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pub struct RedditPost {\n",
+    "    pub headline: String,\n",
+    "    pub location: String,\n",
+    "    pub author : String,\n",
+    "    pub content: String,\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    impl Summary for RedditPost{}\n",
+    "\n",
+    "    let article = RedditPost{\n",
+    "        headline: String::from(\"Dog bites Ai back\"),\n",
+    "        location: String::from(\"JusticeVille\"),\n",
+    "        author : String::from(\"Karma_Canine\"),\n",
+    "        content : String::from(\"Hearwarming story of man's besf friend evening the score!\"),\n",
+    "    };\n",
+    "    println!(\"Reddit Feed! {}\", article.summarize());\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code prints New article available! (Read more...).\n",
+    "\n",
+    "Creating a default implementation doesn’t require us to change anything about  \n",
+    "the implementation of Summary on Tweet in Listing 10-13. The reason is that the  \n",
+    "syntax for overriding a default implementation is the same as the syntax for  \n",
+    "implementing a trait method that doesn’t have a default implementation.\n",
+    "\n",
+    "Default implementations can call other methods in the same trait, even if those  \n",
+    "other methods don’t have a default implementation. In this way, a trait can  \n",
+    "provide a lot of useful functionality and only require implementors to specify  \n",
+    "a small part of it. For example, we could define the Summary trait to have a  \n",
+    "summarize_author method whose implementation is required, and then define a  \n",
+    "summarize method that has a default implementation that calls the  \n",
+    "summarize_author method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reddit Feed! (Read more from u/Karma_Canine ...)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// from aggregator lib crate\n",
+    "pub trait Summary{\n",
+    "    fn summarize_author(&self) -> String;\n",
+    "    fn summarize(&self) -> String{\n",
+    "        format!(\"(Read more from {} ...)\", self.summarize_author())\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{   // main.rs for client crate\n",
+    "    // To use this version of Summary, we only need to define :\n",
+    "    // - summarize_author  \n",
+    "    // when we implement the trait on a type:\n",
+    "    impl Summary for RedditPost{\n",
+    "        fn summarize_author(&self) -> String{\n",
+    "            format!(\"u/{}\", self.author)\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // After we define summarize_author, we can call summarize on instances of  \n",
+    "    // the Reddit struct, and the default implementation of summarize will call  \n",
+    "    // the definition of summarize_author that we’ve provided. Because we’ve  \n",
+    "    // implemented summarize_author, the Summary trait has given us the behavior  \n",
+    "    // of the summarize method without requiring us to write any more code.\n",
+    "    let article = RedditPost{\n",
+    "        headline: String::from(\"Dog bites Ai back\"),\n",
+    "        location: String::from(\"JusticeVille\"),\n",
+    "        author : String::from(\"Karma_Canine\"),\n",
+    "        content : String::from(\"Hearwarming story of man's besf friend evening the score!\"),\n",
+    "    };\n",
+    "    println!(\"Reddit Feed! {}\", article.summarize());\n",
+    "\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> This code prints 1 new tweet: (Read more from @horse_ebooks...).\n",
+    "\n",
+    "Note that it isn’t possible to call the default implementation from an  \n",
+    "overriding implementation of that same method."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trait as Parameters\n",
+    "\n",
+    "Now that you know how to define and implement traits, we can explore how to use  \n",
+    "traits to define functions that accept many different types. We'll use the  \n",
+    "Summary trait we implemented on the NewsArticle and Tweet types in Listing  \n",
+    "10-13 to define a notify function that calls the summarize method on its item  \n",
+    "parameter, which is of some type that implements the Summary trait. To do this,  \n",
+    "we use the impl Trait syntax, like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pub fn notify(item : &impl Summary){\n",
+    "    println!(\"Breaking news! {}\", item.summarize());\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of a concrete type for the item parameter, we specify the impl keyword  \n",
+    "and the trait name. This parameter accepts any type that implements the  \n",
+    "specified trait. In the body of notify, we can call any methods on item that  \n",
+    "come from the Summary trait, such as summarize. We can call notify and pass in  \n",
+    "any instance of NewsArticle or Tweet. Code that calls the function with any  \n",
+    "other type, such as a String or an i32, won’t compile because those types don’t  \n",
+    "implement Summary."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trait Bound Syntax\n",
+    "\n",
+    "The impl Trait syntax works for straightforward cases but is actually syntax  \n",
+    " sugar for a longer form known as a trait bound; it looks like this:\n",
+    "\n",
+    "```rust\n",
+    "pub fn notify<T: Summary>(item: &T) {\n",
+    "    println!(\"Breaking news! {}\", item.summarize());\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This longer form is equivalent to the example in the previous section but is  \n",
+    "more verbose. We place trait bounds with the declaration of the generic type  \n",
+    "parameter after a colon and inside angle brackets.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The impl Trait syntax is convenient and makes for more concise code in simple  \n",
+    "cases, while the fuller trait bound syntax can express more complexity in other  \n",
+    "cases. For example, we can have two parameters that implement Summary. Doing so  \n",
+    "with the impl Trait syntax looks like this:\n",
+    "\n",
+    "```rust\n",
+    "pub fn notify(item1: &impl Summary, item2: &impl Summary) { ... }\n",
+    "```\n",
+    "\n",
+    "Using impl Trait is appropriate if we want this function to allow item1 and  \n",
+    "item2 to have different types (as long as both types implement Summary). If we  \n",
+    "want to force both parameters to have the same type, however, we must use a  \n",
+    "trait bound, like this:\n",
+    "\n",
+    "```rust\n",
+    "pub fn notify<T: Summary>(item1: &T, item2: &T) { ... }\n",
+    "```\n",
+    "\n",
+    "The generic type T specified as the type of the item1 and item2 parameters  \n",
+    "constrains the function such that the concrete type of the value passed as an  \n",
+    "argument for item1 and item2 must be the same.\n",
+    "\n",
+    "> What if I want items to be of different types, using trait bounds style?\n",
+    "\n",
+    "To allow items of different types in the `notify` function, you can use multiple  \n",
+    "generic type parameters, like `T` and `U`. Be sure to update the function  \n",
+    "signature and constraints accordingly. Here's an example:\n",
+    "\n",
+    "```rust\n",
+    "pub fn notify<T: Summary, U: Summary>(item1: &T, item2: &U) { }\n",
+    "```\n",
+    "\n",
+    "This function signature now accepts two items of potentially different types,  \n",
+    "as long as both types implement the `Summary` trait."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Specifying Multiple Trait Bounds with the + Syntax\n",
+    "\n",
+    "We can also specify more than one trait bound. Say we wanted notify to use  \n",
+    "display formatting as well as summarize on item: we specify in the notify  \n",
+    "definition that item must implement both Display and Summary. We can do so  \n",
+    "using the + syntax:\n",
+    "\n",
+    "```rust\n",
+    "pub fn notify(item: &(impl Summary + Display)) { ... }\n",
+    "```\n",
+    "\n",
+    "The + syntax is also valid with trait bounds on generic types:\n",
+    "\n",
+    "```rust\n",
+    "pub fn notify<T: Summary + Display>(item: &T) { ... }\n",
+    "```\n",
+    "\n",
+    "With the two trait bounds specified, the body of notify can call summarize and  \n",
+    "use {} to format item."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clearer Trait Bounds with Where Clause\n",
+    "\n",
+    "Using too many trait bounds has its downsides. Each generic has its own trait  \n",
+    "bounds, so functions with multiple generic type parameters can contain lots of  \n",
+    "trait bound information between the function’s name and its parameter list,  \n",
+    "making the function signature hard to read. For this reason, Rust has alternate  \n",
+    "syntax for specifying trait bounds inside a where clause after the function  \n",
+    "signature. So instead of writing this:\n",
+    "\n",
+    "```rust\n",
+    "fn some_function<T: Display + Clone, U: Clone + Debug>(t: &T, u: &U) -> i32 { ... }\n",
+    "```\n",
+    "\n",
+    "we can use a where clause, like this:  \n",
+    "\n",
+    "```rust\n",
+    "fn some_function<T, U>(t: &T, u: &U) -> i32\n",
+    "where\n",
+    "    T: Display + Clone,\n",
+    "    U: Clone + Debug,\n",
+    "{ ... }\n",
+    "```\n",
+    "This function’s signature is less cluttered: the function name, parameter list,  \n",
+    "and return type are close together, similar to a function without lots of trait  \n",
+    "bounds."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Returning Types that Implement Traits\n",
+    "\n",
+    "We can also use the impl Trait syntax in the return position to return a value  \n",
+    "of some type that implements a trait, as shown here:\n",
+    "\n",
+    "```rust\n",
+    "fn returns_summarizable() -> impl Summary {\n",
+    "    Tweet {\n",
+    "        username: String::from(\"horse_ebooks\"),\n",
+    "        content: String::from(\n",
+    "            \"of course, as you probably already know, people\",\n",
+    "        ),\n",
+    "        reply: false,\n",
+    "        retweet: false,\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "By using impl Summary for the return type, we specify that the  \n",
+    "returns_summarizable function returns some type that implements the Summary  \n",
+    "trait without naming the concrete type. In this case, returns_summarizable  \n",
+    "returns a Tweet, but the code calling this function doesn’t need to know that."
+   ]
   }
  ],
  "metadata": {
@@ -1543,7 +1855,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   },
