lifetime elision WIP

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
@@ -3199,7 +3199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -3207,12 +3207,20 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first_sentence : Call me Ishmael\n",
+      "i.part : Call me Ishmael\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "()"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3223,11 +3231,24 @@
     "}\n",
     "\n",
     "{\n",
+    "    // novel comes into scope as a string stored on the heap\n",
     "    let novel = String::from(\"Call me Ishmael. Some years ago...\");\n",
+    "    // first_sentence comes into scope as a string slice of novel\n",
+    "    // - the lifetime of first_sentence is the same as novel\n",
     "    let first_sentence = novel.split('.').next().expect(\"Could not find a '.'\");\n",
+    "    println!(\"first_sentence : {}\", first_sentence);\n",
+    "    // i comes into scope as an instance of ImportantExcerpt\n",
+    "    // - the lifetime of i is the same as first_sentence\n",
     "    let i = ImportantExcerpt{ \n",
     "        part: first_sentence \n",
     "    };\n",
+    "    println!(\"i.part : {}\", i.part);\n",
+    "    // all lifetimes are valid and there's no dangling references\n",
+    "    // i goes out of scope\n",
+    "    // first_sentence goes out of scope\n",
+    "    // novel goes out of scope\n",
+    "    // all lifetimes end\n",
+    "    // closure ends\n",
     "}"
    ]
   },
@@ -3251,6 +3272,198 @@
     "novel. The data in novel exists before the ImportantExcerpt instance is created.  \n",
     "In addition, novel doesn’t go out of scope until after the ImportantExcerpt goes  \n",
     "out of scope, so the reference in the ImportantExcerpt instance is valid.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lifetime Elision\n",
+    "\n",
+    "You’ve learned that every reference has a lifetime and that you need to specify  \n",
+    "lifetime parameters for functions or structs that use references. However, in  \n",
+    "Chapter 4 we had a function in Listing 4-9, shown again in Listing 10-25, that  \n",
+    "compiled without lifetime annotations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fn first_word(s: &str) -> &str{\n",
+    "    let byte = s.as_bytes();\n",
+    "    for (i, &item) in bytes.iter().enumerate(){\n",
+    "        if item == b' '{\n",
+    "            return &s[0..1]\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    &s[..]\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 10-25: A function we defined in Listing 4-9 that compiled without  \n",
+    "lifetime annotations, even though the parameter and return type are references\n",
+    "\n",
+    "The reason this function compiles without lifetime annotations is historical: in  \n",
+    "early versions (pre-1.0) of Rust, this code wouldn’t have compiled because every  \n",
+    "reference needed an explicit lifetime. At that time, the function signature  \n",
+    "would have been written like this:\n",
+    "\n",
+    "```rust\n",
+    "fn first_word<'a>(s: &'a str) -> &'a str { ... }\n",
+    "```\n",
+    "\n",
+    "After writing a lot of Rust code, the Rust team found that Rust programmers were  \n",
+    "entering the same lifetime annotations over and over in particular situations.  \n",
+    "These situations were predictable and followed a few deterministic patterns. The  \n",
+    "developers programmed these patterns into the compiler’s code so the borrow  \n",
+    "checker could infer the lifetimes in these situations and wouldn’t need explicit  \n",
+    "annotations.\n",
+    "\n",
+    "This piece of Rust history is relevant because it’s possible that more  \n",
+    "deterministic patterns will emerge and be added to the compiler. In the future,  \n",
+    "even fewer lifetime annotations might be required.\n",
+    "\n",
+    "The patterns programmed into Rust’s analysis of references are called the  \n",
+    "lifetime elision rules. These aren’t rules for programmers to follow; they’re a  \n",
+    "set of particular cases that the compiler will consider, and if your code fits  \n",
+    "these cases, you don’t need to write the lifetimes explicitly.\n",
+    "\n",
+    "The elision rules don’t provide full inference. If Rust deterministically  \n",
+    "applies the rules but there is still ambiguity as to what lifetimes the  \n",
+    "references have, the compiler won’t guess what the lifetime of the remaining  \n",
+    "references should be. Instead of guessing, the compiler will give you an error  \n",
+    "that you can resolve by adding the lifetime annotations.\n",
+    "\n",
+    "Lifetimes on function or method parameters are called input lifetimes, and  \n",
+    "lifetimes on return values are called output lifetimes.\n",
+    "\n",
+    "The compiler uses three rules to figure out the lifetimes of the references when  \n",
+    "there aren’t explicit annotations. The first rule applies to input lifetimes,  \n",
+    "and the second and third rules apply to output lifetimes. If the compiler gets  \n",
+    "to the end of the three rules and there are still references for which it can’t  \n",
+    "figure out lifetimes, the compiler will stop with an error. These rules apply to  \n",
+    "fn definitions as well as impl blocks."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The first rule is that the compiler assigns a lifetime parameter to each  \n",
+    "parameter that’s a reference. In other words, a function with one parameter gets  \n",
+    "one lifetime parameter: \n",
+    "\n",
+    "```rust\n",
+    "fn foo<'a>(x: &'a i32); \n",
+    "```\n",
+    "\n",
+    "a function with two parameters gets two separate lifetime parameters: \n",
+    "\n",
+    "```rust\n",
+    "fn foo<'a, 'b>(x: &'a i32, y: &'b i32); \n",
+    "``` \n",
+    "\n",
+    "and so on.\n",
+    "\n",
+    "- The second rule is that, if there is exactly one input lifetime parameter,  \n",
+    "that lifetime is assigned to all output lifetime parameters: \n",
+    "\n",
+    "```rust\n",
+    "fn foo<'a>(x: &'a i32) -> &'a i32.\n",
+    "```\n",
+    "\n",
+    "- The third rule is that, if there are multiple input lifetime parameters, but  \n",
+    "one of them is &self or &mut self because this is a method, the lifetime of self  \n",
+    "is assigned to all output lifetime parameters. This third rule makes methods  \n",
+    "much nicer to read and write because fewer symbols are necessary."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s pretend we’re the compiler. We’ll apply these rules to figure out the  \n",
+    "lifetimes of the references in the signature of the first_word function in  \n",
+    "Listing 10-25. The signature starts without any lifetimes associated with the  \n",
+    "references:\n",
+    "\n",
+    "```rust\n",
+    "fn first_word(s: &str) -> &str { ... }\n",
+    "```\n",
+    "\n",
+    "Then the compiler applies the first rule, which specifies that each parameter  \n",
+    "gets its own lifetime. We’ll call it 'a as usual, so now the signature is this:  \n",
+    "\n",
+    "```rust\n",
+    "fn first_word<'a>(s: &'a str) -> &str { ... } // missing output lifetime\n",
+    "```\n",
+    "\n",
+    "The second rule applies because there is exactly one input lifetime. The second  \n",
+    "rule specifies that the lifetime of the one input parameter gets assigned to the  \n",
+    "output lifetime, so the signature is now this:  \n",
+    "\n",
+    "```rust\n",
+    "fn first_word<'a>(s: &'a str) -> &'a str { ... } // output lifetime == single input\n",
+    "```\n",
+    "\n",
+    "Now all the references in this function signature have lifetimes, and the  \n",
+    "compiler can continue its analysis without needing the programmer to annotate  \n",
+    "the lifetimes in this function signature."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s look at another example, this time using the longest function that had no  \n",
+    "lifetime parameters when we started working with it in Listing 10-20:  \n",
+    "\n",
+    "```rust\n",
+    "fn longest(x: &str, y: &str) -> &str { ... }\n",
+    "```\n",
+    "\n",
+    "Let’s apply the first rule: each parameter gets its own lifetime. This time we  \n",
+    "have two parameters instead of one, so we have two lifetimes:  \n",
+    "\n",
+    "```rust\n",
+    "fn longest<'a, 'b>(x: &'a str, y: &'b str) -> &str { ... } // what is the output lifetime???\n",
+    "// if this were a method, there would be a 'self' or 'mur' and the 3rd rule \n",
+    "// would auto annotate to that ...\n",
+    "// But since this is a function Rust Borrow Checker will raise a compile error\n",
+    "// and we need to resolve manually\n",
+    "```\n",
+    "\n",
+    "You can see that the second rule doesn’t apply because there is more than one  \n",
+    "input lifetime. The third rule doesn’t apply either, because longest is a  \n",
+    "function rather than a method, so none of the parameters are self. \n",
+    "\n",
+    "After working through **`all three rules`** : \n",
+    "- we **`still`** haven’t figured out what the return type’s lifetime is. \n",
+    "\n",
+    "This is why we got an error trying to compile the code in Listing 10-20: the  \n",
+    "compiler worked through the lifetime elision rules but still couldn’t figure out  \n",
+    "all the lifetimes of the references in the signature.\n",
+    "\n",
+    "Because the third rule really only applies in method signatures, we’ll look at  \n",
+    "lifetimes in that context next to see why the third rule means we don’t have to  \n",
+    "annotate lifetimes in method signatures very often.\n"
    ]
   }
  ],
