lifetime method WIP

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
@@ -3199,7 +3199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -3220,7 +3220,7 @@
        "()"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3464,6 +3464,96 @@
     "Because the third rule really only applies in method signatures, we’ll look at  \n",
     "lifetimes in that context next to see why the third rule means we don’t have to  \n",
     "annotate lifetimes in method signatures very often.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lifetime Annotations in Method Definitions\n",
+    "\n",
+    "When we implement methods on a struct with lifetimes, we use the same syntax as  \n",
+    "that of generic type parameters shown in Listing 10-11. Where we declare and use  \n",
+    "the lifetime parameters depends on whether they’re related to the struct fields  \n",
+    "or the method parameters and return values.\n",
+    "\n",
+    "Lifetime names for struct fields always need to be declared after the impl  \n",
+    "keyword and then used after the struct’s name, because those lifetimes are part  \n",
+    "of the struct’s type.\n",
+    "\n",
+    "In method signatures inside the impl block, references might be tied to the  \n",
+    "lifetime of references in the struct’s fields, or they might be independent. In  \n",
+    "addition, the lifetime elision rules often make it so that lifetime annotations  \n",
+    "aren’t necessary in method signatures. Let’s look at some examples using the  \n",
+    "struct named ImportantExcerpt that we defined in Listing 10-24.\n",
+    "\n",
+    "First, we’ll use a method named level whose only parameter is a reference to  \n",
+    "self and whose return value is an i32, which is not a reference to anything:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "impl <'a> ImportantExcerpt<'a> {\n",
+    "    fn level(&self) -> i32{\n",
+    "        3\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The lifetime parameter declaration after impl and its use after the type name  \n",
+    "are required, but we’re not required to annotate the lifetime of the reference  \n",
+    "to self because of the first elision rule.\n",
+    "\n",
+    "Here is an example where the third lifetime elision rule applies:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// There are TWO input lifetimes in this struct\n",
+    "// - one is explicit\n",
+    "// - other is implicit elision rule\n",
+    "impl <'a> ImportantExcerpt<'a> {    // EXPLICIT annotated 'a lifetime\n",
+    "    // implicit 'b lifetime :\n",
+    "    // - because of &self reference arg, the lifetime of the returned str\n",
+    "    // is tied to the lifetime of self IMPLICITLY\n",
+    "    fn announce_and_return_part(&self, announcement: &str)-> &str{\n",
+    "        println!(\"Attention please: {}\", announcement);\n",
+    "        self.part\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two input lifetimes, so Rust applies the first lifetime elision rule  \n",
+    "and gives both &self and announcement their own lifetimes. Then, because one of  \n",
+    "the parameters is &self, the return type gets the lifetime of &self, and all  \n",
+    "lifetimes have been accounted for."
    ]
   }
  ],
