--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
@@ -2795,11 +2795,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `GPT lookup`\n",
-    "\n",
-    "\n",
-    "> Can you give me an example where values don’t “adhere to these constraints”  \n",
-    "where the borrower checker would reject\n",
+    "***\n",
+    "###### GPT > Can you give me an example where values don’t “adhere to these constraints” where the borrower checker would reject\n",
+    "***\n",
     "\n",
     "Certainly! Let's consider an example where the borrow checker would reject the  \n",
     "code due to lifetimes not adhering to the specified constraints.\n",
@@ -3554,6 +3552,83 @@
     "and gives both &self and announcement their own lifetimes. Then, because one of  \n",
     "the parameters is &self, the return type gets the lifetime of &self, and all  \n",
     "lifetimes have been accounted for."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Static Lifetime\n",
+    "\n",
+    "One special lifetime we need to discuss is 'static, which denotes that the  \n",
+    "affected reference can live for the entire duration of the program. All string  \n",
+    "literals have the 'static lifetime, which we can annotate as follows:\n",
+    "\n",
+    "```rust\n",
+    "let s: &'static str = \"I have static lifetime\";\n",
+    "```\n",
+    "\n",
+    "The text of this string is stored directly in the program’s binary, which is  \n",
+    "always available. Therefore, the lifetime of all string literals is 'static.\n",
+    "\n",
+    "You might see suggestions to use the 'static lifetime in error messages. But  \n",
+    "before specifying 'static as the lifetime for a reference, think about whether  \n",
+    "the reference you have actually lives the entire lifetime of your program or  \n",
+    "not, and whether you want it to. Most of the time, an error message suggesting  \n",
+    "the 'static lifetime results from attempting to create a dangling reference or  \n",
+    "a mismatch of the available lifetimes. In such cases, the solution is fixing  \n",
+    "those problems, not specifying the 'static lifetime."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "###### GPT > So any data that has static lifetime is stored directly in the program’s binary?\n",
+    "***\n",
+    "\n",
+    "No, not necessarily. Static lifetime just means that the data exists for the entire run of the program. It could be stored in:\n",
+    "\n",
+    "1. The program's binary (like string literals)\n",
+    "2. Static memory allocated at compile time \n",
+    "3. Global variables\n",
+    "\n",
+    "Some examples:\n",
+    "\n",
+    "```cpp\n",
+    "// Stored in binary\n",
+    "\"Hello\"    // String literal\n",
+    "\n",
+    "// Stored in static memory\n",
+    "static int x = 10;  \n",
+    "\n",
+    "// Global variable \n",
+    "int y = 20;  \n",
+    "\n",
+    "void foo() {\n",
+    "    // Local variable has dynamic lifetime\n",
+    "    int z = 30;  \n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Here:\n",
+    "\n",
+    "- \"Hello\" has static lifetime and is stored in the binary\n",
+    "- static x has static lifetime but is stored in static memory\n",
+    "- global y has static lifetime and is stored in global memory\n",
+    "- local z has dynamic lifetime and is created/destroyed on the stack\n",
+    "\n",
+    "So in summary:\n",
+    "\n",
+    "- Data with static lifetime exists for the entire run of the program\n",
+    "- It can be stored in the binary, static memory, or globals\n",
+    "- Not all static data is necessarily stored in the binary\n",
+    "- Dynamic data has a runtime lifetime and is created/destroyed on the stack or heap\n",
+    "\n",
+    "Hope this clarifies! Let me know if you have any other questions."
    ]
   }
  ],
