--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_10_generic_types_traits_and_lifetime.ipynb
@@ -3566,7 +3566,8 @@
     "literals have the 'static lifetime, which we can annotate as follows:\n",
     "\n",
     "```rust\n",
-    "let s: &'static str = \"I have static lifetime\";\n",
+    "let s: &'static str = \"I have static lifetime\"; \n",
+    "// ah ... we are assigning the string LITERAL to s\n",
     "```\n",
     "\n",
     "The text of this string is stored directly in the program’s binary, which is  \n",
@@ -3629,6 +3630,125 @@
     "- Dynamic data has a runtime lifetime and is created/destroyed on the stack or heap\n",
     "\n",
     "Hope this clarifies! Let me know if you have any other questions."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generic Type Parameters, Trait Bounds and Lifetimes Together\n",
+    "\n",
+    "Let’s briefly look at the syntax of specifying generic type parameters, trait  \n",
+    "bounds, and lifetimes all in one function!  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Announcement! I'm here!\n",
+      "-- Equal length [5] strings\n",
+      "-- [Hello] == [World] ... returning [World]\n",
+      "Returned World\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use std::fmt::Display;\n",
+    "\n",
+    "fn longest_with_an_announcement<'a, T>( // order matters, lifetime first, then generic\n",
+    "    x: &'a str,\n",
+    "    y: &'a str,\n",
+    "    announcement : T\n",
+    ")->&'a str\n",
+    "where T: Display\n",
+    "{\n",
+    "    println!(\"Announcement! {}\", announcement);\n",
+    "    if x.len() == y.len(){\n",
+    "        println!(\"-- Equal length [{}] strings\", x.len());\n",
+    "        println!(\"-- [{x}] == [{y}] ... returning [{y}]\");\n",
+    "    }\n",
+    "    if x.len() > y.len(){\n",
+    "        println!(\"Returned {x}\");\n",
+    "        x\n",
+    "    } else {\n",
+    "        println!(\"Returned {y}\");\n",
+    "        y\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    longest_with_an_announcement(\"Hello\", \"World\", \"I'm here!\");\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the longest function from Listing 10-21 that returns the longer of two  \n",
+    "string slices. But now it has an extra parameter named ann of the generic type  \n",
+    "T, which can be filled in by any type that implements the Display trait as  \n",
+    "specified by the where clause. This extra parameter will be printed using {},  \n",
+    "which is why the Display trait bound is necessary. Because lifetimes are a type  \n",
+    "of generic, the declarations of the lifetime parameter 'a and the generic type  \n",
+    " parameter T go in the same list inside the angle brackets after the function  \n",
+    " name."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary\n",
+    "---\n",
+    "\n",
+    "We covered a lot in this chapter! Now that you know about : \n",
+    "\n",
+    "- generic type parameters, \n",
+    "- traits and trait bounds, and \n",
+    "- generic lifetime parameters, \n",
+    "\n",
+    "You’re ready to write code without repetition that works in many different  \n",
+    "situations. \n",
+    "\n",
+    "- Generic type parameters let you apply the code to different types. \n",
+    "- Traits and trait bounds ensure that even though the types are generic, they’ll  \n",
+    "have the behavior the code needs. \n",
+    "- You learned how to use lifetime annotations to ensure that this flexible code  \n",
+    "won’t have any dangling references. \n",
+    "\n",
+    "And all of this analysis happens at compile time, which doesn’t affect runtime  \n",
+    "performance!\n",
+    "\n",
+    "Believe it or not, there is much more to learn on the topics we discussed in  \n",
+    "this chapter: Chapter 17 discusses trait objects, which are another way to use  \n",
+    "traits. There are also more complex scenarios involving lifetime annotations  \n",
+    "that you will only need in very advanced scenarios; for those, you should read  \n",
+    "the Rust Reference. But next, you’ll learn how to write tests in Rust so you can  \n",
+    "make sure your code is working the way it should."
    ]
   }
  ],
